--- a/package.json
+++ b/package.json
@@ -1,26 +1,20 @@
 {
-  "name": "nodejs",
+  "name": "mean-users",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "babel src --out-dir dist",
-    "dev": "nodemon src/index.js --exec babel-node",
-    "start": "node dist/index.js"
+    "dev": "nodemon backend/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/polyfill": "^7.8.7",
     "express": "^4.17.1",
-    "mongodb": "^3.5.7"
+    "mongoose": "^5.9.14",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.6",
-    "@babel/node": "^7.8.7",
-    "@babel/preset-env": "^7.9.6",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.4"
   }
 }
